# hisho

./: .space.kts  CHANGELOG.md  Cargo.toml  README.md  hisho-env.sh  hisho-parent.env  hisho.ron  service-child.env  service.ron
.cargo/: config.toml
.docker/: rust-ci.Dockerfile
docs/: h.tree  help-versions.json  v.list  writerside.cfg
docs/cfg/: buildprofiles.xml
docs/topics/: Changelog.md  Environment.md  Hisho-as-a-Library.md  Hisho.md  Templating.md
docs/topics/projects/: 00-00-Project-Configuration.md  00-Project-Configuration.md  01-00-Project.md  01-Project.md  02-00-Environment.md  03-00-Container.md  04-00-Build.md  05-00-Service.md  05-01-ServiceProtocol.md  06-00-Command.md  06-01-Process.md
hisho_cli/: Cargo.toml
hisho_cli/src/: main.rs
hisho_cli2/: Cargo.toml
hisho_cli2/src/: main.rs
hisho_core/: Cargo.toml
hisho_core/src/: arg_parse.rs  build.rs  build_tool.rs  command.rs  config.rs  config_models.rs  containers.rs  environment.rs  files.rs  git.rs  lib.rs  log.rs  service.rs  shell.rs  template.rs
src/: build.rs  config.rs  config_models.rs  containers.rs  log.rs  main.rs  shell.rs  template.rs
src/hisho/: build.rs  cli.rs  config.rs  config_models.rs  containers.rs  files.rs  git.rs  log.rs  mod.rs  shell.rs  template.rs
