[package]
name = "service_helper"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argust = "0.0.3"
dockworker = "0.3.0"
dotenv-parser = "0.1.3"
liquid = "0.26.4"
ron = "0.8.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
