[package]
name = "hisho"
version = "1.0.0-rc.1"
license = "MPL-2.0"
authors = ["Thomas Obernosterer <thomas.obernosterer@atvg-studios.com>"]
description = "Hisho is a utility tool for local development with dependencies like Docker containers."
keywords = ["tool", "dev", "development", "make"]
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2021"
rust-version = "1.73.0"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
allow_unsafe_command_templates = []

[dependencies]
argust = "0.0.3"
dockworker = "0.3.0"
dotenv-parser = "0.1.3"
glob = { version = "0.3.1", features = [] }
liquid = "0.26.4"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
ron = "0.8.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
once_cell = "1.18.0"
gix = "0.55.2"
