[package]
name = "hisho_core"
version = "1.1.0-dev.0"
license = "MPL-2.0"
authors = ["Thomas Obernosterer <thomas.obernosterer@atvg-studios.com>"]
description = "Hisho Core provides APIs to build untilities that aim to aid software development."
keywords = ["tool", "dev", "development", "make"]
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.73.0"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# allows for the path of the executable to be templated
allow_unsafe_command_templates = []

[dependencies]
dockworker = "0.3.0"
dotenv-parser = "0.1.3"
glob = { version = "0.3.1", features = [] }
liquid = "0.26.4"
color-print = "0.3.5"
serde = { version = "1", features = ["derive"] }
once_cell = "1.18.0"
gix = "0.55.2"
